<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <Button
        android:id="@+id/change"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintDimensionRatio="1:1"
        android:onClick="change"
        android:text="@string/jump"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <ImageButton
            android:id="@+id/img_before"
            android:contentDescription="@string/load"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="#0000"
            android:onClick="loadPic"
            android:scaleType="fitCenter"
            android:src="@drawable/lenna"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="1"/>

        <ImageButton
            android:id="@+id/img_after"
            android:contentDescription="@string/share"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:background="#0000"
            android:onClick="share"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/blurKernel"
                android:textAlignment="textStart" />

            <SeekBar
                android:id="@+id/seekbar_blur"
                android:layout_weight="15"
                android:max="31"
                android:min="1" />

            <TextView
                android:id="@+id/text_blur_value"
                android:layout_weight="0.5"
                tools:text="@string/value"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/sobelThreshold"
                android:textAlignment="textStart" />

            <SeekBar
                android:id="@+id/seekbar_sobel_threshold"
                android:layout_weight="15"
                android:max="150"
                android:min="1" />

            <TextView
                android:id="@+id/text_sobel_threshold"
                android:layout_weight="0.5"
                tools:text="@string/value"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/anchorThreshold"
                android:textAlignment="textStart" />

            <SeekBar
                android:id="@+id/seekbar_anchor_threshold"
                android:layout_weight="15"
                android:max="150"
                android:min="1" />

            <TextView
                android:id="@+id/text_anchor_threshold"
                android:layout_weight="0.5"
                tools:text="@string/value"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/minimumDistance"
                android:textAlignment="textStart" />

            <SeekBar
                android:id="@+id/seekbar_min_dist"
                android:layout_weight="15"
                android:max="100"
                android:min="1" />

            <TextView
                android:id="@+id/text_min_dist"
                android:layout_weight="0.5"
                tools:text="@string/value"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:text="@string/poissonRadius"
                android:textAlignment="textStart" />

            <SeekBar
                android:id="@+id/seekbar_poisson_r"
                android:layout_weight="15"
                android:max="50"
                android:min="1" />

            <TextView
                android:id="@+id/text_poisson_r"
                android:layout_weight="0.5"
                tools:text="@string/value"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/btn_bit_not"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="bitNot"
                android:text="@string/bitNot" />

            <Button
                android:id="@+id/blur"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="blur"
                android:text="@string/Blur" />

            <Button
                android:id="@+id/gray"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="gray"
                android:text="@string/Gray" />

            <Button
                android:id="@+id/voronoi"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="voronoi"
                android:text="@string/Voronoi" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/distance"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="distance"
                android:text="@string/Distance" />

            <Button
                android:id="@+id/sobel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="sobel"
                android:text="@string/Sobel" />

            <Button
                android:id="@+id/ED"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="ED"
                android:text="@string/ED" />

            <Button
                android:id="@+id/Poly"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="Poly"
                android:text="@string/Poly" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

